cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0025 NEW)

project(advcpp)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_EXTENSIONS OFF)

add_executable(app1 "app1.cpp")
add_executable(app2 "app2.cpp")
add_executable(app3 "app3.cpp")
add_executable(app4 "app4.cpp")
add_executable(app5 "app5.cpp")
add_executable(app6 "app6.cpp")
add_executable(app7 "app7.cpp" "Matrix.h")
add_executable(app8 "app8.cpp" "Matrix.h")
add_executable(app9 "app9.cpp")
add_executable(app10 "app10.cpp")
add_executable(app11 "app11.cpp")
add_executable(app12 "app12.cpp")
add_executable(app13 "app13.cpp")
add_executable(app14 "app14.cpp")
add_executable(app15 "app15.cpp")
add_executable(app16 "app16.cpp")
